--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 java:		
  - 1.7		
  - 1.8		
-script: "mvn clean install"		
+script: "mvn install"		
 branches:		
  only:		
  - master
