--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: java
 java:		
  - 1.7		
  - 1.8		
-script: "mvn install"		
+script: "mvn install"
+install: install_dep.sh
 branches:		
  only:		
  - master
